<resources>
    <string name="app_name">CarHelperApp</string>
    <string name="menu">menu</string>
    <string name="logo">logo</string>
    <string name="carhelper">CarHelper</string>
    <!-- Strings used for fragments for navigation -->

    <string name="your_pocket_assistant">Your pocket assistant</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont Have An Account?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="have_an_account">Have An Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>
    <string name="send_a_request">Send a request</string>
    <string name="describe_your_problem">describe your problem</string>
    <string name="mechanic_tow_truck">mechanic / tow truck</string>
    <string name="car_model">car model</string>
    <string name="creating_a_request">Creating a request</string>
    <string name="phone_number">phone number</string>
</resources>