<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/carhelper"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="44sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/your_pocket_assistant"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/filling_text"
        android:drawableStart="@drawable/profile"
        android:drawablePadding="15dp"
        android:hint="@string/name"
        android:textColorHint="@color/graphiteGray"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/filling_text"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:hint="@string/email_or_phone_number"
        android:textColorHint="@color/graphiteGray"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_name" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/filling_text"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:textColorHint="@color/graphiteGray"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF0000"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/green_button"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <TextView
        android:id="@+id/go_log_in_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/lato"
        android:text="@string/have_an_account"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_button" />
</androidx.constraintlayout.widget.ConstraintLayout>